--- a/lab2_Nedelko/lab2_Nedelko.vcxproj
+++ b/lab2_Nedelko/lab2_Nedelko.vcxproj
@@ -104,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -130,10 +131,14 @@
     <ClCompile Include="cs.cpp" />
     <ClCompile Include="lab2_Nedelko.cpp" />
     <ClCompile Include="pipe.cpp" />
+    <ClCompile Include="redirect_output_wrapper.cpp" />
+    <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cs.h" />
     <ClInclude Include="pipe.h" />
+    <ClInclude Include="redirect_output_wrapper.h" />
+    <ClInclude Include="utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
